# pdf-parsing

./: .gitignore  README.md
app/: README.md  (+2 more)
app-reflex/: .gitignore  README.MD  rxconfig.py
minerU-folder/: README.md  pyproject.toml
minerU-folder/md/2023-conocophillips-aim-presentation-1-7/auto/: 2023-conocophillips-aim-presentation-1-7.md  2023-conocophillips-aim-presentation-1-7_content_list.json  2023-conocophillips-aim-presentation-1-7_middle.json  2023-conocophillips-aim-presentation-1-7_model.json
minerU-folder/md/XC9500_CPLD_Family-1-4/auto/: XC9500_CPLD_Family-1-4.md  XC9500_CPLD_Family-1-4_content_list.json  XC9500_CPLD_Family-1-4_middle.json  XC9500_CPLD_Family-1-4_model.json
minerU-folder/md/deloitte-tech-risk-sector-banking/auto/: deloitte-tech-risk-sector-banking.md  deloitte-tech-risk-sector-banking_content_list.json  deloitte-tech-risk-sector-banking_middle.json  deloitte-tech-risk-sector-banking_model.json
minerU-folder/md/dttl-tax-technology-report-2023/auto/: dttl-tax-technology-report-2023.md  dttl-tax-technology-report-2023_content_list.json  dttl-tax-technology-report-2023_middle.json  dttl-tax-technology-report-2023_model.json
minerU-folder/md/gx-iif-open-data/auto/: gx-iif-open-data.md  gx-iif-open-data_content_list.json  gx-iif-open-data_middle.json  gx-iif-open-data_model.json
minerU-folder/md/life-sciences-smart-manufacturing-services-peak-matrix-assessment-2023/auto/: life-sciences-smart-manufacturing-services-peak-matrix-assessment-2023.md  life-sciences-smart-manufacturing-services-peak-matrix-assessment-2023_content_list.json  (+2 more)
(+66 files in other folders)
